@@ -56,6 +56,12 @@ namespace DiscImageChef.Devices.Linux
 
         [DllImport("libc", EntryPoint="ioctl", SetLastError = true)]
         internal static extern int ioctlSg(int fd, LinuxIoctl request, ref sg_io_hdr_t value);
+
+        [DllImport("libc", CharSet = CharSet.Ansi, SetLastError = true)]
+        internal static extern int readlink(string path, System.IntPtr buf, int bufsize); 
+
+        [DllImport("libc", CharSet = CharSet.Ansi, EntryPoint="readlink", SetLastError = true)]
+        internal static extern long readlink64(string path, System.IntPtr buf, long bufsize); 
     }
 }
 
